<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="?android:attr/windowBackground"
              android:clickable="true"
              android:orientation="vertical"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="8dp"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_car"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editText_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_brand"
                android:maxLines="1"
                android:nextFocusDown="@+id/editText_model"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/editText_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_model"
                android:maxLines="1"
                android:nextFocusDown="@+id/editText_year"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/editText_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_year"
                android:inputType="number"
                android:maxLines="1"
                android:nextFocusDown="@+id/spinner_driver"
                android:singleLine="true"/>

            <Spinner
                android:id="@+id/spinner_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="-2dp"
                android:paddingLeft="-10dp"
                android:nextFocusDown="@+id/spinner_category"/>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/car_category_items"
                android:nextFocusDown="@+id/spinner_transmission"/>

            <Spinner
                android:id="@+id/spinner_transmission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:entries="@array/car_transmission_items"
                android:nextFocusDown="@+id/spinner_drive_wheel"/>

            <Spinner
                android:id="@+id/spinner_drive_wheel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:entries="@array/car_drive_wheel_items"
                android:nextFocusDown="@+id/spinner_engine_type"/>

            <Spinner
                android:id="@+id/spinner_engine_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:entries="@array/car_engine_type_items"
                android:nextFocusDown="@+id/editText_engine_power"/>

            <EditText
                android:id="@+id/editText_engine_power"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_engine_power"
                android:inputType="number"
                android:maxLines="1"
                android:nextFocusDown="@+id/editText_registration_number"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/editText_registration_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_registration_number"
                android:maxLines="1"
                android:nextFocusDown="@+id/button_save"
                android:singleLine="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cancel"/>

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Save"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>